Convert `/ec` to components and fix some problems
- Convert `/ec` to components
- `/searchhomes` now compares distanceSquared rather than distance (idk
  why it wasn't, but it seems to work like this)
- No longer able to till myscelium/podzol when there's a block above